adding much better api structure supporting different calls
