# src/resource_server/views/api_v1/openapi.yaml
@@ -28,404 +28,27 @@ security:
   - ApiKeyAuth: []
 tags: []
 paths:
-  /example:
-    $ref: ./token/index.yml
-  /example/testing:
-    options:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    post:
-      summary: Verify key signatures
-      description: Verify that public key was used to sing the cert key.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              example:
-                variale_1: Example of any variables that you will provide
-                variable_2: Example of any other variable
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/sessioninfo:
-    options:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    get:
-      summary: Slurm session info
-      description: Slurm session info
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/accesstoken:
-    $ref: ./slurm/access_token.yml
-  /slurm/endsession:
-    options:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    get:
-      summary: Finalised user session with the remote job
-      description: Finalised user session with the remote job
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/preference:
-    $ref: ./slurm/preference.yml
-  /slurm/exists:
-    ptions:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    get:
-      summary: Check if user exists
-      description: Check if user exists in the virtual machine or LDAP
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/projects:
-    options:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    get:
-      summary: Get all projects
-      description: Get slurm projects
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/usage:
-    options:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    get:
-      summary: Check usage
-      description: Check usage
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/stopprocess:
-    options:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    get:
-      summary: Stop slurm job
-      description: Stop slurm job
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/startserver:
-    options:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    get:
-      summary: Start server
-      description: Start slurm job
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/listall:
-    options:
-      summary: Request options
-      responses:
-        '200':
-          description: 200 response
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                title: Empty Schema
-                type: object
-    get:
-      summary: List all
-      description: List all jobs running
-      responses:
-        '200':
-          description: OK
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          description: Forbidden
-        '401':
-          description: Unauthorized
-        '403':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /slurm/exechost:
+  /slurm:
+    parameters:
+      - name: endpoint
+        in: path
+        description: Fetch and execute different commands available for slurm
+        required: true
+        schema:
+          type: string
+          enum:
+            - exists
+            - projects
+            - usage
+            - stop_process
+            - start_server
+            - list_all
+            - exec_host
+            - running
+            - accesstoken
+            - end_session
+            - preference
+            - session_info
     options:
       summary: Request options
       responses:
@@ -468,7 +91,18 @@ paths:
           description: Bad Request
         '500':
           description: Internal Server Error
-  /vnc/display:
+  /vnc:
+    parameters:
+      - name: endpoint
+        in: path
+        description: Fetch and execute different commands available for slurm
+        required: true
+        schema:
+          type: string
+          enum:
+            - display
+            - opt
+            - start_tunnel
     options:
       summary: Request options
       responses:
@@ -511,7 +145,16 @@ paths:
           description: Bad Request
         '500':
           description: Internal Server Error
-  /vnc/otp:
+  /group:
+    parameters:
+      - name: endpoint
+        in: path
+        description: Fetch and execute different commands available for group
+        required: true
+        schema:
+          type: string
+          enum:
+            - projects
     options:
       summary: Request options
       responses:
@@ -533,8 +176,8 @@ paths:
                 title: Empty Schema
                 type: object
     get:
-      summary: opt
-      description: opt
+      summary: group projects
+      description: group projects
       responses:
         '200':
           description: OK
@@ -554,8 +197,4 @@ paths:
           description: Bad Request
         '500':
           description: Internal Server Error
-  /slurm/running:
-    $ref: ./slurm/running.yml
-  /group/projects:
-    $ref: ./group/projects.yml
 
